--- a/src/components/components.css
+++ b/src/components/components.css
@@ -29,6 +29,19 @@
     max-height: 15rem;
 }
 
+.carousel .slide {
+    background: white;
+}
+
+/* li.slide.selected > div > img {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+} */
+
 @media screen and (min-width: 1280px) {
     .carousel-image {
         object-fit: cover;
